feat: add attacker-sse-manager
